# lr-rnaseq-rare-disease

./: .gitignore  LICENSE  README.md  pyproject.toml
docker/cdf_plot/: Dockerfile
docker/coverage/: Dockerfile
docker/fraser2/: Dockerfile
docker/outrider/: Dockerfile
docker/read_length/: Dockerfile
docker/sqanti3/: Dockerfile
src/rare_disease_lr_rnaseq/: config.py  utils.py
src/rare_disease_lr_rnaseq/counting/: count_alt5_junction_support.py  count_reads.py
src/rare_disease_lr_rnaseq/coverage/: get_lr_coverage.py  get_sr_coverage.py
src/rare_disease_lr_rnaseq/figure_helpers/: generate_manuscript_figures.py  generate_reads_cum_dist.py  get_cdf_by_tx_length.py  get_num_of_isoforms_per_gene.py  plot_all_tx.py  plot_qc_metrics.py
src/rare_disease_lr_rnaseq/preprocessing/: annotate_gene_and_expr.py  generate_fusion_tx_table.py  generate_reads_summary.py  generate_rl_dist.py  generate_sample_table.py
src/rare_disease_lr_rnaseq/splicing/: alt5_shift_analysis.py  alt5_shift_analysis_sr.py  fraser2_pipeline.py  fraser2_rscripts.py  rank_whole_blood_jaccard.py  rank_whole_blood_psi3.py
src/rare_disease_lr_rnaseq/sqanti3/: sqanti3_filter.py
